# mailing-service

./: .gitignore  README.md  manage.py  pyproject.toml  requirements.txt
attempt/: admin.py  models.py  urls.py  views.py
attempt/migrations/: 0001_initial.py
attempt/templates/attempt/: attempt_list.html
client/: admin.py  models.py  urls.py  views.py
client/migrations/: 0001_initial.py
client/templates/client/: client_confirm_delete.html  client_detail.html  client_form.html  client_list.html
congig/: asgi.py  settings.py  urls.py  wsgi.py
mailing/: admin.py  models.py  urls.py  views.py
mailing/migrations/: 0001_initial.py
mailing/templates/mailing/: base.html  mailing_confirm_delete.html  mailing_detail.html  mailing_form.html  mailing_list.html
mailing/templates/mailing/includes/: inc_footer.html  inc_header.html  inc_menu.html
message/: admin.py  models.py  urls.py  views.py
message/migrations/: 0001_initial.py
message/templates/message/: message_confirm_delete.html  message_detail.html  message_form.html  message_list.html
