[tool.poetry]
name = "mailing"
version = "0.1.0"
description = ""
authors = ["Mikhail Soldatov"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.1.1"
psycopg2 = "^2.9.9"
pillow = "^10.4.0"
python-decouple = "^3.8"
django-apscheduler = "^0.6.2"


[tool.poetry.group.dev.dependencies]
black = "^24.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
